# Website-vulnerabilities-exhibition

./: .env  Cargo.toml  login_page.html
src/: db.rs  main.rs  middleware.rs  utilities.rs
src/exhibits/: ddos_detection.rs  dos_detection.rs  firewall.rs  mod.rs  sql_injection.rs
src/middleware/: firewall.rs
src/tools/: firewall.rs  mod.rs  rate_limit.rs
