[package]
name = "Final_CTF_Webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-rt = "2" # For running async code on Actix
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"

# Database and SQL handling
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# Rate limiting for DDoS detection
governor = "0.4"

# Templating engine for front-end
askama = "0.12"

[dev-dependencies]
reqwest = "0.11"
tokio-test = "0.4"