[package]
name = "Final_CTF_Webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6"
actix-rt = "2.10" # For running async code on Actix
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
idna = "=1.0.3"
futures-util = "0.3.31"

# Database and SQL handling
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }

# Rate limiting for DDoS detection
governor = "0.7"

[dev-dependencies]
reqwest = "0.12"
tokio-test = "0.4"